--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://www.notion.so/b6fcf809ca5047b89f423948dce013a0?v=03ddc4d6130a47f8b68e74c9d0061de2",
+  "url": "https://cerulean-stick-319.notion.site/0b6951fd719a43829d56a51d6b176adb?v=e7b5d6a7cd5e42dc9102817adac3b8d5",
   "theme": "pure-ejs",
   "previewBrowser": "/usr/bin/chromium",
   "autoSlug": true
