--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,6 @@
     # Controls when the workflow will run
     on:
       schedule:
-    		# 下一行是说在每天的国际标准时间23点（北京时间早上7点）触发该任务
-    		# 你可以随意修改
         - cron: '0 23 * * *'    
       # Allows you to run this workflow manually from the Actions tab
       workflow_dispatch:
@@ -32,5 +30,5 @@
             with:
               token: ${{ secrets.ACCESS_TOKEN }}
               repository-name: taewoooooo/taewoooooo.github.io # 修改这里
-              BRANCH: master  # 如果你的仓库默认分支是 master 记得修改这里                    
+              BRANCH: main  # 如果你的仓库默认分支是 master 记得修改这里                    
               FOLDER: public
